added digest for b58